# slint-mobile

./: .gitignore  Cargo.toml  README.md  _README.md  _ci.yml  cargo-generate.toml  justfile  post-script.rhai  rust-toolchain.toml
.claude/skills/slint-ui/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  pages.yml  template.yml
app/: Cargo.toml
app/src/: lib.rs
app/ui/: main.slint
core/: Cargo.toml
core/src/: lib.rs
web/: index.html
