[package]
name = "{{crate_name}}"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
slint = { workspace = true }
app_core = { workspace = true }

[build-dependencies]
slint-build = { workspace = true }

# cargo-apk2 configuration. Everything under [package.metadata.android] is
# read by cargo-apk2 when packaging the cdylib into an APK. `build_targets`
# here is what lets `cargo apk2 run` work without an explicit `--target`.
#
# cargo-apk2 also supports `kotlin_sources = "kotlin"` (and `java_sources`)
# if you grow JVM-side glue later — see the README's "Adding JVM-side
# glue" section. The default project doesn't ship any.
[package.metadata.android]
package = "{{android_package}}"
# Build both ABIs by default: aarch64 is the only architecture on real
# Android devices; x86_64 is what the default emulator system image uses
# on Linux/Windows dev machines. With both listed, the produced APK runs
# unchanged on a phone or on the local emulator.
build_targets = ["aarch64-linux-android", "x86_64-linux-android"]
resources = "android-res"
assets = "android-assets"

[package.metadata.android.sdk]
min_sdk_version = 24
target_sdk_version = 34

[package.metadata.android.application]
label = "{{app_label}}"
# theme = "@android:style/Theme.DeviceDefault.NoActionBar"

# Slint's Skia renderer uses Vulkan when available but falls back to GL.
# Declare Vulkan as optional so the APK still installs on Vulkan-less devices.
[[package.metadata.android.uses_feature]]
name = "android.hardware.vulkan.level"
required = false
version = 1
